--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "~8.1.1",
     "bootstrap": "4.1.1",
     "mydatepicker": "^2.6.6",
-    "ngx-bootstrap": "^5.1.2",
+    "primeng": "^8.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
