--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "styles": [
               "src/styles.css",
               "./node_modules/primeng/resources/primeng.min.css",
-              "./node_modules/primeng/resources/themes/nova-light/theme.css"
+              "./node_modules/primeng/resources/themes/nova-light/theme.css",
+              "./node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
