--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.3.1",
     "mydatepicker": "^2.6.6",
+    "primeicons": "^2.0.0",
     "primeng": "^8.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
