--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css",
               "./node_modules/primeng/resources/primeng.min.css",
               "./node_modules/primeng/resources/themes/nova-light/theme.css",
