--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.1.1",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "mydatepicker": "^2.6.6",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.3",
